grammar.js
    source_file: ($) => repeat($._top_level),

    _top_level: ($) =>
      choice(
        $.module_definition,
        $.protocol_definition,
        $.impl_definition,
        $.struct_definition,
        $.union_definition,
        $.type_declaration,
        $.opaque_declaration,
        $.import_statement,
        $.alias_statement,
      ),

    // ── Comments ──────────────────────────────────────────────────
    visibility_modifier: ($) => "pub",

    // ── Module definition ─────────────────────────────────────────
    module_definition: ($) =>
      seq(
        optional($.visibility_modifier),
        "module",
        field("name", $.module_path),
        optional(seq("extends", field("parent", $.module_path))),
        "{",
        repeat($._module_member),
        "}",
      ),

    _module_member: ($) =>
      choice(
        $.function_definition,
        $.macro_definition,
        $.struct_definition,
        $.union_definition,
        $.type_declaration,
        $.opaque_declaration,
        $.import_statement,
        $.alias_statement,
        $.use_statement,
        $.attribute_declaration,
        $._expression,
      ),

    // ── Protocol definition ───────────────────────────────────────
    function_definition: ($) =>
      seq(
        optional($.visibility_modifier),
        "fn",
        field("name", $.identifier),
        "(",
        optional($.parameter_list),
        ")",
        optional(seq("->", field("return_type", $.type_expression))),
        optional(seq("if", field("guard", $._expression))),
        "{",
        field("body", optional($.body)),
        "}",
      ),

    macro_definition: ($) =>
      seq(
        optional($.visibility_modifier),
        "macro",
        field(
          "name",
          choice(
            $.identifier,
            "if",
            "cond",
            "and",
            "or",
            "fn",
            "struct",
            "union",
            "|>",
          ),
        ),
        "(",
        optional($.parameter_list),
        ")",
        optional(seq("->", field("return_type", $.type_expression))),
        "{",
        field("body", optional($.body)),
        "}",
      ),

    body: ($) => repeat1($._statement),

    _statement: ($) =>
      choice(
        $._expression,
        $.assignment,
        $.function_definition,
        $.macro_definition,
        $.import_statement,
      ),

    parameter_list: ($) => commaSep1($.parameter),

    parameter: ($) =>
      seq(
        field("pattern", $._pattern_expr),
        optional(
          seq(
            "::",
            optional($.ownership_modifier),
            field("type", $.type_expression),
          ),
        ),
        optional(seq("=", field("default", $._expression))),
      ),

    _pattern_expr: ($) =>
      choice(
        $._primary,
        prec(PREC.UNARY, seq(choice("-", "not"), $._pattern_expr)),
      ),

    // ── Struct definitions ────────────────────────────────────────
    struct_definition: ($) =>
      seq(
        optional($.visibility_modifier),
        "struct",
        field("name", $.module_path),
        optional(seq("extends", field("parent", $.module_path))),
        "{",
        repeat(seq($.struct_field, optional(","))),
        "}",
      ),

    struct_field: ($) =>
      seq(
        field("name", $.identifier),
        "::",
        field("type", $.type_expression),
        optional(seq("=", field("default", $._expression))),
      ),

    // ── Union definitions ─────────────────────────────────────────
    union_definition: ($) =>
      seq(
        optional($.visibility_modifier),
        "union",
        field("name", $.module_name),
        "{",
        repeat(seq($.union_variant, optional(","))),
        "}",
      ),

    union_variant: ($) =>
      seq(
        field("name", $.module_name),
        optional(seq("::", field("type", $.type_expression))),
      ),

    // ── Type declarations ─────────────────────────────────────────
    type_declaration: ($) =>
      seq(
        optional($.visibility_modifier),
        "type",
        field("name", $.module_name),
        optional(seq("(", commaSep1($.type_variable), ")")),
        "=",
        field("type", $.type_expression),
      ),

    attribute_declaration: ($) =>
      prec.dynamic(1, seq(
        "@",
        field("name", $.identifier),
        optional(
          choice(
            seq(
              "::",
              field("type", $.type_expression),
              "=",
              field("value", $._expression),
            ),
            seq("=", field("value", $._expression)),
          ),
        ),
      )),

    // ── Use statement ─────────────────────────────────────────────
    use_statement: ($) =>
      seq("use", field("module", $.module_path)),

    // ── Import and alias ──────────────────────────────────────────
    type_expression: ($) =>
      choice($.union_type, $._type_primary),

    union_type: ($) =>
      prec.left(seq($._type_primary, repeat1(seq("|", $._type_primary)))),

    _type_primary: ($) =>
      choice(
        $.type_name,
        $.type_variable,
        $.parameterized_type,
        $.user_type,
        $.tuple_type,
        $.list_type,
        $.map_type,
        $.function_type,
        $.literal_type,
        seq("(", $.type_expression, ")"),
      ),

    type_name: ($) =>
      choice(
        "i8", "i16", "i32", "i64",
        "u8", "u16", "u32", "u64",
        "f16", "f32", "f64",
        "isize", "usize",
        "Bool", "String", "Atom", "Nil", "Never",
      ),

    type_variable: ($) => $.identifier,

    tuple_type: ($) => seq("{", commaSep1($.type_expression), "}"),

    list_type: ($) => seq("[", $.type_expression, "]"),

    _expression: ($) =>
      choice(
        $._primary,
        $.binary_expression,
        $.unary_expression,
        $.pipe_expression,
        $.error_pipe_expression,
        $.unwrap_expression,
        $.type_annotation,
      ),

    binary_expression: ($) =>
      choice(
        prec.left(PREC.OR, seq($._expression, "or", $._expression)),
        prec.left(PREC.AND, seq($._expression, "and", $._expression)),
        prec.left(
          PREC.COMPARE,
          seq($._expression, $.comparison_operator, $._expression),
        ),
        prec.left(
          PREC.ADD,
          seq($._expression, $.additive_operator, $._expression),
        ),
        prec.left(PREC.CONCAT, seq($._expression, "<>", $._expression)),
        prec.left(
          PREC.MULT,
          seq($._expression, $.multiplicative_operator, $._expression),
        ),
      ),

    comparison_operator: ($) => choice("==", "!=", "<", ">", "<=", ">="),
    additive_operator: ($) => choice("+", "-"),
    multiplicative_operator: ($) => choice("*", "/", "rem"),

    pipe_expression: ($) =>
      prec.left(PREC.PIPE, seq($._expression, "|>", $._expression)),

    error_pipe_expression: ($) =>
      prec.left(
        PREC.ERROR_PIPE,
        seq(
          $._expression,
          "~>",
          choice(
            seq("{", repeat($.case_clause), "}"),
            $._expression,
          ),
        ),
      ),

    unwrap_expression: ($) =>
      prec.left(PREC.UNWRAP, seq($._expression, token.immediate("!"))),

    wildcard: ($) => "_",
    integer: ($) =>
      token(
        choice(
          /[0-9][0-9_]*/,
          seq("0x", /[0-9a-fA-F][0-9a-fA-F_]*/),
          seq("0b", /[01][01_]*/),
          seq("0o", /[0-7][0-7_]*/),
        ),
      ),

    string: ($) =>
      seq(
        '"',
        repeat(
          choice($.string_content, $.escape_sequence, $.string_interpolation),
        ),
        '"',
      ),

    // ── Heredoc (triple-quoted string) ────────────────────────────
    heredoc: ($) =>
      seq(
        '"""',
        repeat(
          choice(
            $.heredoc_content,
            $.escape_sequence,
            $.string_interpolation,
          ),
        ),
        '"""',
      ),

    heredoc_content: ($) =>
      token.immediate(prec(1, /[^"\\#]+|"[^"]|""[^"]|#[^{]/)),

    string_content: ($) => token.immediate(prec(1, /[^"\\#]+|#[^{]/)),
    string_interpolation: ($) =>
      seq(token.immediate("#{"), $._expression, "}"),

    // ── Sigil ─────────────────────────────────────────────────────
    sigil: ($) =>
      seq($.sigil_name, choice($.string, $.heredoc)),

    sigil_name: ($) => token(seq("~", /[a-zA-Z_][a-zA-Z0-9_]*/)),

    atom: ($) => token(seq(":", /[a-zA-Z_][a-zA-Z0-9_]*[!?]?/)),

    tuple: ($) => seq("{", commaSep1($._expression), "}"),

    list: ($) =>
      seq(
        "[",
        optional(
          choice(
            seq(commaSep1($._expression), "|", $._expression),
            commaSep1($._expression),
          ),
        ),
        "]",
      ),

    map_literal: ($) =>
      seq(
        "%{",
        optional(
          seq(
            optional(seq($._expression, "|")),
            commaSep1(choice($.map_entry, $.struct_field_value)),
          ),
        ),
        "}",
      ),

    struct_field_value: ($) =>
      seq(field("key", $.identifier), ":", field("value", $._expression)),

    binary_literal: ($) =>
      seq("<<", optional(commaSep1($.binary_segment)), ">>"),

    binary_segment: ($) =>
      seq($._pattern_expr, optional(seq("::", $.binary_type_spec))),

    binary_type_spec: ($) =>
      seq(
        choice($.identifier, $.module_name),
        optional(seq("-", $.binary_type_modifier)),
      ),

    function_call: ($) =>
      prec.right(
        PREC.CALL,
        seq(
          field("name", $.identifier),
          token.immediate("("),
          optional($.argument_list),
          ")",
          optional(field("block", $.block_argument)),
        ),
      ),

    argument_list: ($) => commaSep1($._expression),

    attribute_reference: ($) => seq("@", field("name", $.identifier)),

    if_expression: ($) =>
      seq(
        "if",
        field("condition", $._expression),
        "{",
        field("then", optional($.body)),
        "}",
        optional(seq("else", "{", field("else", optional($.body)), "}")),
      ),

    case_expression: ($) =>
      seq(
        "case",
        field("subject", $._expression),
        "{",
        repeat1($.case_clause),
        "}",
      ),

    case_clause: ($) =>
      seq(
        field("pattern", $._expression),
        optional(seq("::", field("type_annotation", $.type_expression))),
        optional(seq("if", field("guard", $._expression))),
        "->",
        field("body", $._expression),
      ),

    for_expression: ($) =>
      seq(
        "for",
        field("variable", $.identifier),
        "<-",
        field("iterable", $._expression),
        optional(seq(",", field("filter", $._expression))),
        "{",
        field("body", $._expression),
        "}",
      ),

    // ── Quote / Unquote ───────────────────────────────────────────
    quote_expression: ($) => seq("quote", "{", optional($.body), "}"),

    unquote_expression: ($) => seq("unquote", "(", $._expression, ")"),

    identifier: ($) => /[a-z_][a-zA-Z0-9_]*[!?]?/,
    module_name: ($) => /[A-Z][a-zA-Z0-9]*/,
    module_path: ($) =>
      prec.left(seq($.module_name, repeat(seq(".", $.module_name)))),
  },
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}
