test/corpus/functions.txt
================================================================================
Simple function
================================================================================

pub module App {
  pub fn main() {
    42
  }
}

--------------------------------------------------------------------------------

(source_file
  (module_definition
    (visibility_modifier)
    name: (module_path (module_name))
    (function_definition
      (visibility_modifier)
      name: (identifier)
      body: (body (integer)))))

================================================================================
Function with pattern matching parameter
================================================================================

pub module Factorial {
  pub fn factorial(0 :: i64) -> i64 {
    1
  }
}

--------------------------------------------------------------------------------

(source_file
  (module_definition
    (visibility_modifier)
    name: (module_path (module_name))
    (function_definition
      (visibility_modifier)
      name: (identifier)
      (parameter_list
        (parameter
          pattern: (integer)
          type: (type_expression (type_name))))
      return_type: (type_expression (type_name))
      body: (body (integer)))))

================================================================================
Function with guard
================================================================================

pub module Guards {
  pub fn classify(n :: i64) -> String if n > 0 {
    "positive"
  }
}

--------------------------------------------------------------------------------

(source_file
  (module_definition
    (visibility_modifier)
    name: (module_path (module_name))
    (function_definition
      (visibility_modifier)
      name: (identifier)
      (parameter_list
        (parameter
          pattern: (identifier)
          type: (type_expression (type_name))))
      return_type: (type_expression (type_name))
      guard: (binary_expression
        (identifier)
        (comparison_operator)
        (integer))
      body: (body (string (string_content))))))

================================================================================
Function with default parameters
================================================================================

pub module Http {
  pub fn request(url :: String, method :: String = "GET") -> String {
    method <> " " <> url
  }
}

--------------------------------------------------------------------------------

(source_file
  (module_definition
    (visibility_modifier)
    name: (module_path (module_name))
    (function_definition
      (visibility_modifier)
      name: (identifier)
      (parameter_list
        (parameter
          pattern: (identifier)
          type: (type_expression (type_name)))
        (parameter
          pattern: (identifier)
          type: (type_expression (type_name))
          default: (string (string_content))))
      return_type: (type_expression (type_name))
      body: (body
        (binary_expression
          (binary_expression
            (identifier)
            (string (string_content)))
          (identifier))))))

================================================================================
Private function
================================================================================

pub module Foo {
  fn helper() -> i64 {
    0
  }
}

--------------------------------------------------------------------------------

(source_file
  (module_definition
    (visibility_modifier)
    name: (module_path (module_name))
    (function_definition
      name: (identifier)
      return_type: (type_expression (type_name))
      body: (body (integer)))))

================================================================================
Function with list type parameter
================================================================================

pub module App {
  pub fn main(_args :: [String]) -> String {
    "hello"
  }
}

--------------------------------------------------------------------------------

(source_file
  (module_definition
    (visibility_modifier)
    name: (module_path (module_name))
    (function_definition
      (visibility_modifier)
      name: (identifier)
      (parameter_list
        (parameter
          pattern: (identifier)
          type: (type_expression
            (list_type
              (type_expression (type_name))))))
      return_type: (type_expression (type_name))
      body: (body (string (string_content))))))
