test/corpus/literals.txt
================================================================================
Integer literals
================================================================================

def main() do
  42
  1_000_000
  0xFF
end

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    body: (body
      (integer)
      (integer)
      (integer))))

================================================================================
String with interpolation
================================================================================

def main() do
  "Hello #{name}!"
end

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    body: (body
      (string
        (string_content)
        (string_interpolation (identifier))
        (string_content)))))

================================================================================
Atom literals
================================================================================

def main() do
  :ok
  :error
end

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    body: (body
      (atom)
      (atom))))

================================================================================
List with cons
================================================================================

def main() do
  [1, 2, 3]
  [h | t]
end

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    body: (body
      (list (integer) (integer) (integer))
      (list (identifier) (identifier)))))

================================================================================
Map literal
================================================================================

def main() do
  %{x: 1, y: 2}
end

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    body: (body
      (map_literal
        (struct_field_value
          key: (identifier)
          value: (integer))
        (struct_field_value
          key: (identifier)
          value: (integer))))))

================================================================================
Binary literal with type specs
================================================================================

def main() do
  <<">"::String, rest::String>>
end

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    body: (body
      (binary_literal
        (binary_segment
          (string (string_content))
          (binary_type_spec (module_name)))
        (binary_segment
          (identifier)
          (binary_type_spec (module_name)))))))
