test/corpus/types.txt
================================================================================
Struct definition
================================================================================

pub struct Point {
  x :: f64
  y :: f64
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    (visibility_modifier)
    name: (module_path (module_name))
    (struct_field
      name: (identifier)
      type: (type_expression (type_name)))
    (struct_field
      name: (identifier)
      type: (type_expression (type_name)))))

================================================================================
Struct with default and extends
================================================================================

pub struct Circle extends Shape {
  radius :: f64
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    (visibility_modifier)
    name: (module_path (module_name))
    parent: (module_path (module_name))
    (struct_field
      name: (identifier)
      type: (type_expression (type_name)))))

================================================================================
Union definition
================================================================================

pub union Color {
  Red
  Green
  Blue
}

--------------------------------------------------------------------------------

(source_file
  (union_definition
    (visibility_modifier)
    name: (module_name)
    (union_variant
      name: (module_name))
    (union_variant
      name: (module_name))
    (union_variant
      name: (module_name))))

================================================================================
Union with typed variants
================================================================================

pub union ParseResult {
  Ok :: String
  Error :: Atom
}

--------------------------------------------------------------------------------

(source_file
  (union_definition
    (visibility_modifier)
    name: (module_name)
    (union_variant
      name: (module_name)
      type: (type_expression (type_name)))
    (union_variant
      name: (module_name)
      type: (type_expression (type_name)))))

================================================================================
Union return type
================================================================================

pub module App {
  pub fn check(x :: i64) -> String | Nil {
    "ok"
  }
}

--------------------------------------------------------------------------------

(source_file
  (module_definition
    (visibility_modifier)
    name: (module_path (module_name))
    (function_definition
      (visibility_modifier)
      name: (identifier)
      (parameter_list
        (parameter
          pattern: (identifier)
          type: (type_expression (type_name))))
      return_type: (type_expression
        (union_type
          (type_name)
          (type_name)))
      body: (body (string (string_content))))))

================================================================================
Tuple return type
================================================================================

pub module Tuples {
  pub fn pair() -> {i64, String} {
    {1, "one"}
  }
}

--------------------------------------------------------------------------------

(source_file
  (module_definition
    (visibility_modifier)
    name: (module_path (module_name))
    (function_definition
      (visibility_modifier)
      name: (identifier)
      return_type: (type_expression
        (tuple_type
          (type_expression (type_name))
          (type_expression (type_name))))
      body: (body
        (tuple
          (integer)
          (string (string_content)))))))

================================================================================
Type declaration with params
================================================================================

pub module M {
  type Result(a, e) = {a, e}
}

--------------------------------------------------------------------------------

(source_file
  (module_definition
    (visibility_modifier)
    name: (module_path (module_name))
    (type_declaration
      name: (module_name)
      (type_variable (identifier))
      (type_variable (identifier))
      type: (type_expression
        (tuple_type
          (type_expression (type_variable (identifier)))
          (type_expression (type_variable (identifier))))))))
